fix z-index cssnano

--- a/src/typescript/components/forms/form.pcss
+++ b/src/typescript/components/forms/form.pcss
@@ -1,4 +1,4 @@
-@import '../../variables.pcss';
+@parcel-import '../../variables.pcss';
 
 .form-group {
     max-width: 600px;
@@ -39,6 +39,7 @@
 
     .errors {
         display: none;
+        z-index: var(--z-dropdown);
 
         > li {
             white-space: nowrap;
@@ -57,6 +58,10 @@
     .error:focus ~ .errors,
     .error:hover ~ .errors {
         display: block;
+    }
+
+    .error ~ .errors,
+    .error ~ .errors {
         pointer-events: none;
         position: absolute;
         top: calc(100% + 9px);
@@ -66,7 +71,6 @@
         font-size: .75rem;
         padding: 5px 10px;
         line-height: 1.2;
-        z-index: var(--z-bottom);
 
         &:after {
             bottom: 100%;
